# MAES

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
config/: dataDictionaryConfig.json  defaultConfig.json
docs/: SummarySchema.md  createDocs.bat
docs/reference/: CombustionCalculations.docx  CompressorEngineLoad.docx  TankBatt.tex  WellsReference.tex  leakWord.docx
docs/source/: conf.py  example.rst  gettingStarted.rst  index.rst  usage.rst
docs/source/FileReference/: GC.rst  distributionFile.rst  emissionTimeseries.rst  equipment.rst  factors.rst  fluidFlows.rst  gasCompositions.rst  index.rst  instantaneousEvents.rst  metadata.rst  secondaryEventInfo.rst  siteDefinition.rst  summaryEmission.rst  summaryFluidFlow.rst  summaryState.rst
docs/source/ModelReference/: Compressor.rst  ContinuousSeparator.rst  CycledWell.rst  Dehydrator.rst  DumpingSeparator.rst  FFDumpService.rst  FFLink.rst  Facility.rst  FixedSource.rst  Flare.rst  MiscCompressorStati.rst  MiscWellpad.rst  Probe.rst  TankBattery.rst  Well.rst  index.rst
docs/source/PhysicalProcesses/: Combustion.rst  Leaks.rst  WellsReference.rst  index.rst
docs/source/graphics/: CoupledStateMachines.drawio
input/CuratedData/FactorsFileReference/: Factors.csv
input/ModelFormulation/: Compressor.json  ContinuousSeparator.json  Dehydrator.json  DumpingSeparator.json  Facility.json  IntermittentPneumatics.json  Probe.json  TankBattery.json  ThreePhaseContinuousSeparator.json  Well.json
input/Studies/AMI GC Files/: Amity_Station.csv  Arrowhead_Compressor_Station.csv  BP_2_MandR_DEHY_STATION.csv  (+127 more)
postprocessing/: annualSummaries_simulation_level_by_METype.py  annualSummaries_simulation_level_category.py  annualSummaries_simulation_level_modelReadableName.py  generate_MII_emiss_thresholds.py  plot_PDFs_CDFs_with_aerial_meas_overlay.py  plot_annualSummaries_METype_level.py  plot_annualSummaries_modelReadableName_level.py  plot_annualSummaries_site_level.py  plot_annualSummaries_unitID_level.py  plot_timeseries_and_state_transitions.py
src/: AppUtils.py  Chooser.py  ConfigManager.py  CreateDistributionFiles.py  DESMain2.py  DataDictionaryGenerator.py  Distribution.py  DistributionProfile.py  Driver4EC.py  EmissionAccumulator.py  EmissionDriver.py  EmissionRate.py  EmitterProfile.py  EquipmentTable.py  EventLogger.py  EventMain.py  FileSystemManager.py  FluidFlowCheck.py  GasComposition3.py  GenerateArgDoc.py  GraphMain4.py  GraphUtils.py  Integrator.py  Lookup.py  LookupMain.py  MEETClasses.py  MEETComponentLeaks.py  MEETExceptions.py  MEETFFClasses.py  MEETFluidFlow.py  MEETGlobals.py  MEETInstantaneousEmission.py  MEETIntermittentPneumatic.py  MEETLinkedProductionEq.py  MEETMain.py  MEETProductionWells.py  MEETSamples.py  MEETSimSummary.py  MEETTankFlash.py  MEETTestEquipment.py  (+22 more)
src/Testing/: ColumnNames.py  SiteTesting.py  SummaryTest.py  ValidateTiming.py  Validation.py
src/UnitTests/: EmissionProfileTest.py  TestGC.csv  test_AccumulatorTest.py  test_ChooserTest.py  test_ConfigManager.py  test_DistReaderTest.py  test_DistributionSerializer.py  test_EmissionEvaluation.py  test_EmitterProfileTest.py  test_EmitterTestv2.py  test_FilenameExpansionTest.py  test_FlashComposition.py  test_FluidFlow.py  test_GasComposition.py  test_IntegratorTest.py  test_InterruptTest.py  test_MPRandom.py  test_MappingPerfTest.py  test_ModelFormulationTest.py  test_ParamKey.py  test_SimDataManager.py  test_StateEnabledTest.py  test_StateManagerTest.py  test_StatisticalTest.py  test_Timeseries.py  test_genProfiles.py  test_parquetmetadata.py  text_GCProfile.py
src/utilities/: CompressorPaperSummary.py  EmissionsCSVGenerator.py  EquipmentCallMapper.py  EquipmentTree.py  FluidFlowVerification.py
test/: BadCompressorVariance.xlsx  MEET_Major_Equipment_Test_Plan.docx  Test Matrix.xlsx  TestCompressorVariance.xlsx
(+1025 files in other folders)
